--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,7 @@
 title: 五绣
 email: yearan@163.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  没什么,酷爱而已...
 baseurl: "/githubA3B5" # the subpath of your site, e.g. /blog
 url: "https://githuba3b5.github.io" # the base hostname & protocol for your site
 twitter_username: None
