添加日记类别,去掉其他类别

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # ----------- CONFIGURABLE START -----------
-title:            "LiberXue|FullStack|独立开发者|jekyll blog|GitHub blog"
-description:      "Full Stack独立开发者|欢迎来到 LiberXue「角落」侃侃理想、谈谈人生、敲敲代码。"
-url:              https://liberxue.github.io # 域名
-signoff:          "LiberXue" # Your name
+title:            "五绣的世界"
+description:      "没什么,酷爱而已..."
+url:              https://ryanlee.cn # 域名
+signoff:          "五绣" # Your name
 facebook_appid:   #liberxue
-google_analytics: UA-101222464-1
+google_analytics: #UA-101222464-1
 share:            true 
 # 分页
 paginate: 15
@@ -14,15 +14,8 @@ links:
   - name:         首页
     url:          /
     external:     false
-  - name:         书籍
-    url:          /book
-    external:     false
-  - name:         旅游
-    url:          /road
-    external:     false
-  - name:         归档
-    url:          /archives
-    external:     false
+  - name:         日记 
+    url:          /diary
   - name:         标签
     url:          /tags
     external:     false
