--- a/_config.yml
+++ b/_config.yml
@@ -29,3 +29,4 @@ permalink: /:year/:month/:day/:title.html
 defaults:
   - values:
       layout: "default"
+      background-image: http://ot1cc1u9t.bkt.clouddn.com/17-7-15/82431810.jpg
