修改书籍默认封面

--- a/_config.yml
+++ b/_config.yml
@@ -29,4 +29,4 @@ permalink: /:year/:month/:day/:title.html
 defaults:
   - values:
       layout: "default"
-      background-image: http://ot1cc1u9t.bkt.clouddn.com/17-7-15/82431810.jpg
+      background-image: http://pic.58pic.com/58pic/17/39/17/58PIC2C58PICnKt_1024.JPG
